--- a/src/styles/-variables.scss
+++ b/src/styles/-variables.scss
@@ -14,6 +14,23 @@ $border: #dfe4ed;
 $primaryBorder: #a8d3ff;
 $lightPrimaryBg: #eaf3ff;
 $lightPrimaryBorder: #d5e7ff;
+//font size
+$fontsize10:10px;
+$fontsize11:11px;
+$fontsize13:13px;
+$fontsize14:14px;
+$fontsize15:15px;
+$fontsize16:16px;
+$fontsize17:17px;
+$fontsize19:19px;
+$fontsize21:21px;
+$fontsize23:23px;
+$fontsize25:25px;
+$fontsize27:27px;
+$fontsize29:29px;
+$fontsize31:31px;
+$fontsize36:36px;
+$fontsize47:47px;
 // sidebar
 $menuText:#bfcbd9;
 $menuActiveText:#0970ff;
