--- a/src/styles/-Article.scss
+++ b/src/styles/-Article.scss
@@ -22,7 +22,7 @@
             border:1px solid #999999;
             line-height:30px;
             color:#999;
-            font-size:13px;
+            font-size:$fontsize14;
             height:32px;
             width:100%;
             box-sizing:border-box;
@@ -63,7 +63,7 @@
             text-align:center;
             padding-right: 10px;
             line-height:24px;
-            font-size:14px;
+            font-size:$fontsize15;
             color:#999;
             position:relative;
             margin-right: 10px;
@@ -88,7 +88,7 @@
                 background:none;
                 border:0px;
                 color:#4c4c4c;
-                font-size:14px;
+                font-size:$fontsize15;
                 height:24px;
                 line-height:24px;
                 &:hover{
@@ -132,7 +132,7 @@
                 overflow:hidden;
                 padding:10px 0;
                 text-align:left;
-                font-size:18px;
+                font-size:$fontsize19;
                 line-height:24px;
                 margin:0px 0px 5px 0px;
                 color:#1a1a1a;
@@ -154,7 +154,7 @@
                     dt{
                         width:100%;
                         padding:10px 0;
-                        font-size:16px;
+                        font-size:$fontsize16;
                         line-height:24px;
                         text-align:center;
                         font-weight:normal;
@@ -172,7 +172,7 @@
                             top:0;
                         }
                         span{
-                            font-size:12px;
+                            font-size:$fontsize13;
                         }
                     }
                     dd{
@@ -222,7 +222,7 @@
                 line-height:30px;
                 box-sizing:border-box;
                 padding-left:10px;
-                font-size:14px;
+                font-size:$fontsize15;
                 &:focus{
                     border-color:$menuActiveText;
                 }
@@ -236,7 +236,7 @@
                 line-height:30px;
                 box-sizing:border-box;
                 padding-left:10px;
-                font-size:14px;
+                font-size:$fontsize15;
                 &:focus{
                     border-color:$menuActiveText;
                 }
@@ -252,7 +252,7 @@
                     strong{
                         float:left;
                         width: 116px;
-                        font-size:15px;
+                        font-size:$fontsize16;
                         font-weight:normal;
                         color:#1a1a1a;
                         line-height:32px;
@@ -293,7 +293,7 @@
                         float:left;
                         line-height:32px;
                         vertical-align:middle;
-                        font-size:15px;
+                        font-size:$fontsize16;
                         color:#1a1a1a;
                         font-weight:normal;
                         width:116px;
@@ -335,7 +335,7 @@
                     display:inline-block;
                     line-height:40px;
                     vertical-align:middle;
-                    font-size:15px;
+                    font-size:$fontsize16;
                     color:#1a1a1a;
                     word-wrap: break-word;
                     word-break: break-all;
@@ -349,7 +349,7 @@
                 display:inline-block;
                 line-height:40px;
                 vertical-align:middle;
-                font-size:15px;
+                font-size:$fontsize16;
                 color:#1a1a1a;
                 word-wrap: break-word;
                 word-break: break-all;
@@ -406,14 +406,14 @@
                 }
             }
             .ArticleSixFrTopHeader{
-                font-size:20px;
+                font-size:$fontsize21;
                 color:#383838;
                 line-height:24px;
                 strong{
                     font-weight: normal;
                 }
                 span{
-                    font-size:14px;
+                    font-size:$fontsize15;
                     color:#9a9a9a;
                     display: inline-block;
                     padding-left:5px;
@@ -436,7 +436,7 @@
                     padding: 20px 0px 30px 0px;
                     .hide-name{
                         float: left;
-                        font-size: 14px;
+                        font-size:$fontsize15;
                         color: #778293;
                         margin: 0px;
                         line-height: 30px;
@@ -462,7 +462,7 @@
                     }
                     .el-button--primary{
                         float:right;
-                        font-size:16px;
+                        font-size:$fontsize16;
                         color:#242122;
                         line-height:30px;
                         width: 90px;
@@ -539,11 +539,11 @@
                         }
                         &.name{
                             font-weight: bold;
-                            font-size:16px;
+                            font-size:$fontsize16;
                             color:#182332;
                         }
                         &.time{
-                            font-size:12px;
+                            font-size:$fontsize13;
                             color:#7f8596;
                             display: inline-block;
                             padding-left:8px;
@@ -561,7 +561,7 @@
                             display: block;
                             color:#2e88ff;
                             i{
-                                font-size: 16px;
+                                font-size:$fontsize16;
                             }
                         }
                     }
@@ -572,13 +572,13 @@
                     p,div{
                         width: 100%;
                         margin: 5px 0;
-                        font-size: 15px;
+                        font-size:$fontsize16;
                         color: #2b3848;
                         line-height: 24px;
                     }
                     table{
                         margin:5px 0;
-                        font-size: 15px;
+                        font-size:$fontsize16;
                         color: #2b3848;
                         line-height: 24px;
                     }
@@ -600,7 +600,7 @@
             clear:both;
             display:block;
             text-align:left;
-            font-size:28px;
+            font-size:$fontsize29;
             line-height:1.3;
             color:#0b0b0b;
         }
@@ -608,7 +608,7 @@
             clear:both;
             display:block;
             text-align:left;
-            font-size:20px;
+            font-size:$fontsize21;
             line-height:1.3;
             color:#0b0b0b;
             padding-top:10px;
@@ -623,7 +623,7 @@
                     float:left;
                     margin-right:10px;
                     border-radius:4px;
-                    font-size:14px;
+                    font-size:$fontsize15;
                     color:#fff;
                     background:#2e88ff;
                     border:1px solid #2e88ff;
@@ -633,7 +633,7 @@
                         margin-right:5px;
                         width: 16px;
                         height: 16px;
-                        font-size: 16px;
+                        font-size:$fontsize16;
                         vertical-align: -1px;
                     }
                     &.back{
@@ -656,14 +656,14 @@
             .ArticleSixFlTopTagFr{
                 float:right;
                 color:#6688b4;
-                font-size:14px;
+                font-size:$fontsize15;
                 line-height:24px;
                 padding-top:3px;
                 padding-bottom:3px;
                 span{
                     margin:0 10px;
                     color: lighten(#6688b4,30%);
-                    font-size: 12px;
+                    font-size:$fontsize13;
                 }
             }
         }
@@ -676,7 +676,7 @@
             p{
                 clear:both;
                 display:block;
-                font-size:14px;
+                font-size:$fontsize15;
                 color:#999;
                 line-height:24px;
                 padding:5px 0px;
@@ -697,7 +697,7 @@
         }
         h2{
           width: 100%;
-          font-size: 13px;
+          font-size:$fontsize14;
           color: $menuActiveText;
           line-height: 1.2;
           padding: 15px;
