--- a/src/styles/-DepIndex.scss
+++ b/src/styles/-DepIndex.scss
@@ -12,14 +12,14 @@
             margin-top: 5px;
             .tit-h3{
                 color: #1a1a1a;
-                font-size: 16px;
+                font-size:$fontsize17;
                 font-weight: bold;
                 display: inline-block;
                 vertical-align: top;
             }
             .tit-span{
                 color: #a1a1a1;
-                font-size: 12px;
+                font-size:$fontsize13;
                 display: inline-block;
                 margin-left: 15px;
             }
@@ -31,7 +31,7 @@
                 width: 118px;
                 height: 26px;
                 vertical-align: middle;
-                font-size: 12px;
+                font-size:$fontsize13;
                 color: #666;
                 .el-input__inner{
                     line-height: 26px;
@@ -43,7 +43,7 @@
                 .el-input__prefix{
                     right: 6px;
                     text-align: right;
-                    font-size: 14px;
+                    font-size:$fontsize15;
                     left: auto;
                     .el-input__icon{
                         line-height: 26px;
@@ -56,7 +56,7 @@
             .go-left,.go-right{
                 display: inline-block;
                 vertical-align: middle;
-                font-size: 12px;
+                font-size:$fontsize13;
                 line-height: 26px;
                 padding: 0 10px;
                 color: #9ea5af;
@@ -112,17 +112,17 @@
                 display:block;
                 text-align:center;
                 line-height:42px;
-                font-size:28px;
+                font-size:$fontsize29;
                 color:#f38080;
                 margin-right:20px;
             }
             p{
-                font-size:14px;
+                font-size:$fontsize15;
                 color:#333;
                 line-height:26px;
                 strong{
                     float:right;
-                    font-size:24px;
+                    font-size:$fontsize25;
                     color:#3f3232;
                     font-weight:normal;
                 }
@@ -207,10 +207,10 @@
             padding-left: 55px;
             p{
                 color: #666666;
-                font-size: 14px;
+                font-size:$fontsize15;
                 line-height: 30px;
                 span{
-                    font-size: 24px;
+                    font-size:$fontsize25;
                     margin-left: 18px;
                 }
             }
@@ -255,14 +255,14 @@
             margin-top: 5px;
             .tit-h3{
                 color: #1a1a1a;
-                font-size: 16px;
+                font-size:$fontsize17;
                 font-weight: bold;
                 display: inline-block;
                 vertical-align: top;
             }
             .tit-span{
                 color: #a1a1a1;
-                font-size: 12px;
+                font-size:$fontsize13;
                 display: inline-block;
                 margin-left: 15px;
             }
@@ -273,7 +273,7 @@
             .el-input{
                 width: 98px;
                 height: 26px;
-                font-size: 12px;
+                font-size:$fontsize13;
                 color: #666;
                 vertical-align: middle;
                 .el-input__inner{
@@ -286,7 +286,7 @@
                 .el-input__prefix{
                     right: 6px;
                     text-align: right;
-                    font-size: 14px;
+                    font-size:$fontsize15;
                     left: auto;
                     .el-input__icon{
                         line-height: 26px;
@@ -303,14 +303,14 @@
         .maintit{
             text-align: right;
             padding-right: 12px;
-            font-size: 14px;
+            font-size:$fontsize15;
             color: #faa642;
         }
         .departLineBox{
             margin-top: 20px;
             li{
                 .departName{
-                    font-size:12px;
+                    font-size:$fontsize13;
                     color:#111;
                     line-height:26px;
                     width:65px;
@@ -332,7 +332,7 @@
                             position: absolute;
                             left: 100%;
                             padding-left: 10px;
-                            font-size: 12px;
+                            font-size:$fontsize13;
                             height: 18px;
                             line-height: 18px;
                             color: #555;
@@ -355,7 +355,7 @@
                     height: 14px;
                     .step{
                         line-height: 14px;
-                        font-size: 12px;
+                        font-size:$fontsize13;
                         color: #999;
                         position: absolute;
                         left: 0;
@@ -376,7 +376,7 @@
                     }
                 }
                 .departScore{
-                    font-size:16px;
+                    font-size:$fontsize17;
                     width:80px;
                     text-align:center;
                     color: #cccccc;
@@ -384,7 +384,7 @@
                         display: inline-block;
                         height: 26px;
                         line-height: 26px;
-                        font-size: 12px;
+                        font-size:$fontsize13;
                     }
                     span:before{
                         content: '';
@@ -414,7 +414,7 @@
             }
         }
         .departMean{
-            font-size:12px;
+            font-size:$fontsize13;
             color:#111;
             text-align:center;
             line-height:12px;
@@ -478,14 +478,14 @@
             margin-top: 5px;
             .tit-h3{
                 color: #1a1a1a;
-                font-size: 16px;
+                font-size:$fontsize17;
                 font-weight: bold;
                 display: inline-block;
                 vertical-align: top;
             }
             .tit-span{
                 color: #a1a1a1;
-                font-size: 12px;
+                font-size:$fontsize13;
                 display: inline-block;
                 margin-left: 15px;
             }
@@ -498,7 +498,7 @@
         span{
             padding-left: 27px;
             display: inline-block;
-            font-size: 12px;
+            font-size:$fontsize13;
             line-height: 14px;
             color: #111;
             position: relative;
@@ -589,14 +589,14 @@
             margin-top: 5px;
             .tit-h3{
                 color: #1a1a1a;
-                font-size: 16px;
+                font-size:$fontsize17;
                 font-weight: bold;
                 display: inline-block;
                 vertical-align: top;
             }
             .tit-span{
                 color: #a1a1a1;
-                font-size: 12px;
+                font-size:$fontsize13;
                 display: inline-block;
                 margin-left: 15px;
             }
@@ -607,7 +607,7 @@
             .el-input{
                 width: 98px;
                 height: 26px;
-                font-size: 12px;
+                font-size:$fontsize13;
                 color: #666;
                 vertical-align: middle;
                 .el-input__inner{
@@ -620,7 +620,7 @@
                 .el-input__prefix{
                     right: 6px;
                     text-align: right;
-                    font-size: 14px;
+                    font-size:$fontsize15;
                     left: auto;
                     .el-input__icon{
                         line-height: 26px;
@@ -647,7 +647,7 @@
           .depName{
             background-color: #f4f6f9;
             line-height: 45px;
-            font-size: 14px;
+            font-size:$fontsize15;
             color: #111;
           }
           .depRes{
@@ -655,11 +655,11 @@
             padding-bottom: 20px;
             .resnum{
               color: #000000;
-              font-size: 16px;
+              font-size:$fontsize17;
             }
             .resdet{
               margin-left: 5px;
-              font-size: 13px;
+              font-size:$fontsize14;
               position: relative;
               color: #666;
               i{
@@ -696,14 +696,14 @@
             margin-top: 5px;
             .tit-h3{
                 color: #1a1a1a;
-                font-size: 16px;
+                font-size:$fontsize17;
                 font-weight: bold;
                 display: inline-block;
                 vertical-align: top;
             }
             .tit-span{
                 color: #a1a1a1;
-                font-size: 12px;
+                font-size:$fontsize13;
                 display: inline-block;
                 margin-left: 15px;
             }
@@ -720,7 +720,7 @@
             height: 44px;
             background-color: #f4f6f9;
             color: #111;
-            font-size: 14px;
+            font-size:$fontsize15;
             font-weight: normal;
             tr,th{
                 background-color: #f6f7fa;
@@ -739,7 +739,7 @@
             padding: 16px 0 14px;
             .cet01{
                 color: #4d4d4d;
-                font-size: 16px;
+                font-size:$fontsize17;
                 padding-left: 22px;
                 background-image: url(../assets/face01.png);
                 background-position: left center;
@@ -748,7 +748,7 @@
             }
             .cet02{
                 color: #2f9e32;
-                font-size: 16px;
+                font-size:$fontsize17;
                 padding-left: 22px;
                 background-position: left center;
                 background-repeat: no-repeat;
@@ -757,7 +757,7 @@
             }
             .cet03{
                 color: #ff7e00;
-                font-size: 16px;
+                font-size:$fontsize17;
                 padding-left: 22px;
                 background-position: left center;
                 background-repeat: no-repeat;
@@ -766,7 +766,7 @@
             }
             .cet04{
                 color: #ff3434;
-                font-size: 16px;
+                font-size:$fontsize17;
                 padding-left: 22px;
                 background-position: left center;
                 background-repeat: no-repeat;
@@ -821,14 +821,14 @@
             margin-top: 5px;
             .tit-h3{
                 color: #1a1a1a;
-                font-size: 16px;
+                font-size:$fontsize17;
                 font-weight: bold;
                 display: inline-block;
                 vertical-align: top;
             }
             .tit-span{
                 color: #a1a1a1;
-                font-size: 12px;
+                font-size:$fontsize13;
                 display: inline-block;
                 margin-left: 15px;
             }
@@ -839,7 +839,7 @@
             .el-input{
                 width: 98px;
                 height: 26px;
-                font-size: 12px;
+                font-size:$fontsize13;
                 color: #666;
                 vertical-align: middle;
                 .el-input__inner{
@@ -852,7 +852,7 @@
                 .el-input__prefix{
                     right: 6px;
                     text-align: right;
-                    font-size: 14px;
+                    font-size:$fontsize15;
                     left: auto;
                     .el-input__icon{
                         line-height: 26px;
@@ -871,7 +871,7 @@
                 float: left;
                 span{
                     color: #a5a5a5;
-                    font-size: 12px;
+                    font-size:$fontsize13;
                     position: relative;
                     &:before{
                         content: '';
@@ -920,7 +920,7 @@
             }
             .departMean{
                 float: right;
-                font-size:12px;
+                font-size:$fontsize13;
                 color:#111;
                 line-height:12px;
                 span{
@@ -968,7 +968,7 @@
             li{
                 align-items: center;
                 .departName{
-                    font-size:12px;
+                    font-size:$fontsize13;
                     color:#111;
                     line-height:26px;
                     width:95px;
@@ -1077,7 +1077,7 @@
                         .nowNum{
                             display: block;
                             color: #2259e5;
-                            font-size: 12px;
+                            font-size:$fontsize13;
                             padding-bottom: 4px;
                             position: relative;
                             &:before{
@@ -1094,7 +1094,7 @@
                         }
                         .aimNum{
                             display: block;
-                            font-size: 12px;
+                            font-size:$fontsize13;
                             color: #7f7f7f;
                             margin-top: 3px;
                         }
@@ -1102,7 +1102,7 @@
                 }
                 .delText{
                     color: #a2a2a2;
-                    font-size: 12px;
+                    font-size:$fontsize13;
                     width: 84px;
                     text-align: center;
                 }
@@ -1123,7 +1123,7 @@
                             position: absolute;
                             left: 100%;
                             padding-left: 10px;
-                            font-size: 12px;
+                            font-size:$fontsize13;
                             height: 18px;
                             line-height: 18px;
                             color: #555;
@@ -1147,7 +1147,7 @@
                     z-index: 0;
                     .step{
                         line-height: 14px;
-                        font-size: 12px;
+                        font-size:$fontsize13;
                         color: #999;
                         position: absolute;
                         left: 0;
@@ -1165,7 +1165,7 @@
                     }
                 }
                 .departScore{
-                    font-size:16px;
+                    font-size:$fontsize17;
                     width:80px;
                     text-align:center;
                     color: #cccccc;
