--- a/src/styles/-MemberCompare.scss
+++ b/src/styles/-MemberCompare.scss
@@ -19,7 +19,7 @@
         display: block;
         vertical-align: top;
         color: #1a1a1a;
-        font-size: 16px;
+        font-size:$fontsize17;
         padding-bottom:12px;
         line-height:1;
     }
@@ -28,7 +28,7 @@
         display: block;
         vertical-align: top;
         color:#a1a1a1;
-        font-size: 13px;
+        font-size:$fontsize14;
         line-height:1;
         span{
             display: inline-block;
@@ -73,7 +73,7 @@
                     width: 50px;
                     height: 38px;
                     color: #888888;
-                    font-size:13px;
+                    font-size:$fontsize14;
                     text-align: center;
                     line-height:38px;
                     &.numTop01{
@@ -167,14 +167,14 @@
             }
             .userName{
                 color: #111111;
-                font-size: 14px;
+                font-size:$fontsize15;
                 .dept{
                     color:#666;
                 }
             }
             .userInquiry{
                 color: #333333;
-                font-size: 13px;
+                font-size:$fontsize14;
                 text-align: right;
                 .num01{
                     background-image: linear-gradient(90deg,#f9c020 ,#f83801);
@@ -281,7 +281,7 @@
                     width: 27px;
                     height: 32px;
                     color: #888888;
-                    font-size:13px;
+                    font-size:$fontsize14;
                     text-align: center;
                     line-height:32px;
                     &.numTop01{
@@ -363,14 +363,14 @@
             }
             .userName{
                 color: #111111;
-                font-size: 14px;
+                font-size:$fontsize15;
                 .dept{
                     color:#666;
                 }
             }
             .userInquiry{
                 color: #333333;
-                font-size: 13px;
+                font-size:$fontsize14;
                 text-align: right;
                 .num01{
                     background-image: linear-gradient(90deg,#f9c020 ,#f83801);
@@ -472,7 +472,7 @@
                     width: 26px;
                     height: 38px;
                     color: #888888;
-                    font-size:13px;
+                    font-size:$fontsize14;
                     text-align: center;
                     line-height:38px;
                     &.rank01{
@@ -504,7 +504,7 @@
                     width: 26px;
                     height: 38px;
                     color: #888888;
-                    font-size:13px;
+                    font-size:$fontsize14;
                     text-align: center;
                     line-height:38px;
                 }
@@ -574,7 +574,7 @@
             }
             .userName{
                 color: #111111;
-                font-size: 14px;
+                font-size:$fontsize15;
                 .dept{
                     color:#666;
                 }
@@ -583,7 +583,7 @@
                 text-align: right;
                 p{
                     color: #333333;
-                    font-size: 13px;
+                    font-size:$fontsize14;
                     padding-left: 30px;
                     line-height: 38px;
                     position: relative;
@@ -648,7 +648,7 @@
         display:block;
         vertical-align: top;
         color: #1a1a1a;
-        font-size: 16px;
+        font-size:$fontsize17;
         padding:10px 30px;
         line-height:36px;
         background: -moz-linear-gradient(right,#fffdfa 0%, #fff9e8 100%);
@@ -658,7 +658,7 @@
         background: linear-gradient(to left,#fffdfa 0%,#fff9e8 100%);
         span{
             color: #d62815;
-            font-size: 18px;
+            font-size:$fontsize19;
             margin-left: 5px;
             margin-right: 5px;
         }
@@ -673,7 +673,7 @@
         thead{
             height:48px;
             color: #1a1a1a;
-            font-size: 13px;
+            font-size:$fontsize14;
             font-weight: normal;
             tr,th{
                 background-color: #fffcf5;
@@ -691,7 +691,7 @@
             line-height: normal;
             .urank{
                 color: #888888;
-                font-size: 13px;
+                font-size:$fontsize14;
                 width: 18px;
                 height: 18px;
                 border-radius: 2px;
@@ -763,21 +763,21 @@
                 }
             }
             .uname{
-                font-size: 13px;
+                font-size:$fontsize14;
                 color: #111111;
                 cursor: pointer;
             }
             .innum{
                 color: #333333;
-                font-size: 13px;
+                font-size:$fontsize14;
             }
             .dealnum{
                 color: #333333;
-                font-size: 13px;
+                font-size:$fontsize14;
             }
             .milnum{
                 color: #333333;
-                font-size: 13px;
+                font-size:$fontsize14;
                 padding-left:30px;
                 display: inline-block;
                 line-height:38px;
@@ -868,7 +868,7 @@
                 width:30px;
                 height:36px;
                 color: #888888;
-                font-size:13px;
+                font-size:$fontsize14;
                 text-align: center;
                 line-height:36px;
                 .numTop{
@@ -933,14 +933,14 @@
             }
             .userName{
                 color: #111111;
-                font-size: 14px;
+                font-size:$fontsize15;
                 .dept{
                     color:#666;
                 }
             }
             .userAward{
                 color: #333333;
-                font-size: 13px;
+                font-size:$fontsize14;
                 text-align: right;
                 .num01{
                     background-image: linear-gradient(90deg,#f9c020 ,#f83801);
