--- a/src/styles/-btn.scss
+++ b/src/styles/-btn.scss
@@ -40,7 +40,7 @@
 }
 
 .pan-btn {
-  font-size: 14px;
+  font-size:$fontsize15;
   color: #fff;
   padding: 14px 36px;
   border-radius: 8px;
@@ -92,6 +92,6 @@
   outline: 0;
   margin: 0;
   padding: 10px 15px;
-  font-size: 14px;
+  font-size:$fontsize15;
   border-radius: 4px;
 }
