--- a/src/styles/-dict.scss
+++ b/src/styles/-dict.scss
@@ -10,7 +10,7 @@
             height: 42px;
             line-height: 32px;
             padding: 5px;
-            font-size: 14px;
+            font-size:$fontsize15;
         }
         .item-input{
             padding: 5px;
@@ -19,7 +19,7 @@
             padding: 5px;
             height: 42px;
             line-height: 32px;
-            font-size: 14px;
+            font-size:$fontsize15;
         }
         &.btn-panel{
             padding: 20px;
