--- a/src/styles/-singleperson.scss
+++ b/src/styles/-singleperson.scss
@@ -6,9 +6,9 @@
         position: relative;
         z-index: 9;
         .choosetit{
-            font-size: 13px;
+            font-size:$fontsize14;
             color: #666;
-            width: 65px;
+            width:80px;
             display: inline-block;
             vertical-align: middle;
             line-height: 25px;
@@ -16,7 +16,7 @@
         .departItems{
             span{
                 color: #4c4c4c;
-                font-size: 13px;
+                font-size:$fontsize14;
                 border: none;
                 padding: 6px 16px;
                 line-height: 25px;
@@ -49,7 +49,7 @@
     .choosePerson{
             &.active{
                 margin-top: 16px;
-                margin-left: 75px;
+                margin-left:90px;
                 padding-top: 5px;
                 padding-bottom: 5px;
                 padding-left: 12px;
@@ -77,7 +77,7 @@
                         vertical-align: middle;
                     }
                     span{
-                        font-size: 12px;
+                        font-size:$fontsize13;
                         display: inline-block;
                         color: #313131;
                     }
@@ -101,7 +101,7 @@
     }
     .multiSelect{
             margin-top: 16px;
-            margin-left: 75px;
+            margin-left:90px;
             padding-top:5px;
             padding-bottom:5px;
             padding-left: 12px;
@@ -127,7 +127,7 @@
                         vertical-align: middle;
                     }
                     span{
-                        font-size: 12px;
+                        font-size:$fontsize13;
                         display: inline-block;
                         color: #313131;
                     }
@@ -249,7 +249,7 @@
         }
         .personName{
             color: #333333;
-            font-size: 22px;
+            font-size:$fontsize23;
             margin-top: 15px;
             text-align: center;
             font-weight: normal;
@@ -258,7 +258,7 @@
         }
         .workTime{
             color: #999999;
-            font-size: 12px;
+            font-size:$fontsize13;
             margin-top: 8px;
             text-align: center;
             position: relative;
@@ -276,7 +276,7 @@
             z-index: 1;
             text-align:center;
             .num01,.num02{
-                font-size: 16px;
+                font-size:$fontsize17;
                 line-height: 34px;
                 text-align: center;
             }
@@ -299,7 +299,7 @@
         .pHistory,.pCompare{
             text-align: center;
             color: #444444;
-            font-size: 14px;
+            font-size:$fontsize15;
             line-height: 18px;
             padding: 10px 10px;
             border: solid 1px #e7e9ee;
@@ -341,7 +341,7 @@
         border-top: dashed 1px #ececec;
         p{
             color: #494949;
-            font-size: 13px;
+            font-size:$fontsize14;
             span{
                 color: #919191;
             }
@@ -363,7 +363,7 @@
         border-top: dashed 1px #ececec;
         .mtit{
             color: #919191;
-            font-size: 13px;
+            font-size:$fontsize14;
             display: inline-block;
             padding-right: 22px;
             background: url(../assets/tips_icon.png) right center no-repeat;
@@ -381,7 +381,7 @@
                 float: left;
                 div{
                     color: #808080;
-                    font-size: 13px;
+                    font-size:$fontsize14;
                     line-height: 18px;
                     padding-left: 22px;
                     background-size: 16px auto;
@@ -402,7 +402,7 @@
                 }
                 .res{
                     color: #151515;
-                    font-size: 22px;
+                    font-size:$fontsize23;
                     display: block;
                     margin-top: 15px;
                     padding-left: 22px;
@@ -429,20 +429,20 @@
             cursor: pointer;
             .yearTabTitle{
                 color: #808080;
-                font-size: 13px;
+                font-size:$fontsize14;
                 line-height:20px;
                 span{
                     display: inline-block;
                     vertical-align: top;
                     color: #a1a1a1;
-                    font-size: 12px;
+                    font-size:$fontsize13;
                     margin-top: 1px;
                     margin-left: 10px;
                 }
             }
             .yearNum{
                 color: #151515;
-                font-size: 22px;
+                font-size:$fontsize23;
                 line-height: 24px;
                 padding-top: 8px;
                 padding-bottom: 6px;
@@ -452,7 +452,7 @@
 	            border-radius: 10px;
                 padding: 4px 10px;
                 color: #999999;
-                font-size: 12px;
+                font-size:$fontsize13;
                 display: inline-block;
                 .numsep{
                     display: inline-block;
@@ -516,7 +516,7 @@
             vertical-align: middle;
             padding-left: 18px;
             position: relative;
-            font-size: 12px;
+            font-size:$fontsize13;
             color: #999;
         }
         .line1{
@@ -579,7 +579,7 @@
     background-color: #fff;
     .stitle{
         color: #1a1a1a;
-        font-size: 16px;
+        font-size:$fontsize17;
     }
     &:after{
         content: '';
@@ -599,7 +599,7 @@
         .el-table th.el-table__cell{
             background-color: #f4f6f9;
             color: #666666;
-            font-size: 14px;
+            font-size:$fontsize15;
             padding: 14px 0;
         }
         .el-table th.el-table__cell.is-leaf, .el-table td.el-table__cell{
@@ -609,7 +609,7 @@
         .el-table .el-table__cell{
             padding: 20px 0;
             color: #333;
-            font-size: 14px;
+            font-size:$fontsize15;
         }
         .el-table--border::after{
             display: none;
@@ -660,13 +660,13 @@
                 background-repeat: no-repeat;
             }
             p{
-                font-size: 13px;
+                font-size:$fontsize14;
                 color: #808080;
             }
             span{
                 display: block;
                 color: #e02929;
-                font-size: 22px;
+                font-size:$fontsize23;
                 margin-top: 10px;
             }
         }
@@ -708,21 +708,15 @@
         &:first-child+.compareWhoItem{.user_img{border-color:#ffc544;}}
         &:first-child+.compareWhoItem+.compareWhoItem{.user_img{border-color:#77e5b3;}}
         &:first-child+.compareWhoItem+.compareWhoItem+.compareWhoItem{.user_img{border-color:#fa9472;}}
-        &.nouser{
-            .user_img{
-                border-color:#e6e6e6!important;
-                border-style: dashed;
-            }
-        }
         .user_name{
             h4{
                 color: #333333;
-                font-size: 14px;
+                font-size:$fontsize15;
                 padding-top: 10px;
             }
             p{
                 color: #999999;
-                font-size: 13px;
+                font-size:$fontsize14;
                 margin-top: 7px;
                 white-space: nowrap;
                 overflow: hidden;
@@ -792,7 +786,7 @@
         }
         .whoText{
             color: #999999;
-            font-size: 14px;
+            font-size:$fontsize15;
             padding-top: 10px;
         }
         &:after{
@@ -812,13 +806,13 @@
             display: inline-block;
             vertical-align: middle;
             color: #333333;
-            font-size: 16px;
+            font-size:$fontsize17;
         }
         span{
             display: inline-block;
             vertical-align: middle;
             color: #a1a1a1;
-            font-size: 12px;
+            font-size:$fontsize13;
             margin-left: 13px;
         }
     }
@@ -839,7 +833,7 @@
                 background-color: #f8fafc;
                 text-align: center;
                 color: #1a1a1a;
-                font-size: 12px;
+                font-size:$fontsize13;
                 padding: 15px 0;
             }
             .el-table th.el-table__cell{
@@ -1007,12 +1001,12 @@
         .user_name{
             h4{
                 color: #333333;
-                font-size: 13px;
+                font-size:$fontsize14;
                 line-height:21px;
             }
             p{
                 color: #909090;
-                font-size: 13px;
+                font-size:$fontsize14;
                 line-height:21px;
             }
         }
@@ -1045,7 +1039,7 @@
                 width:95px;
                 text-align: left;
                 color:#858585;
-                font-size:13px;
+                font-size:$fontsize14;
                 line-height:26px;
             }
             .historyIcon{
@@ -1086,14 +1080,14 @@
                 background:url(../assets/personalHistoryIcon01.png) no-repeat left top;
                 color:#fff;
                 line-height:26px;
-                font-size:13px;
+                font-size:$fontsize14;
                 text-align: center;
                 margin-right:15px;
                 margin-left:30px;
             }
             .historyCon{
                 float: left;
-                font-size:13px;
+                font-size:$fontsize14;
                 line-height:26px;
                 color:#252525;
                 width: 370px;
