--- a/src/styles/-teamMember.scss
+++ b/src/styles/-teamMember.scss
@@ -45,7 +45,7 @@
             display: block;
             height: 28px;
             line-height: 28px;
-            font-size: 13px;
+            font-size:$fontsize14;
             color: #666666;
             text-align: left;
           }
@@ -65,7 +65,7 @@
                 height: 28px;
                 padding: 0 8px;
                 line-height: 26px;
-                font-size: 13px;
+                font-size:$fontsize14;
                 color: #9ea5af;
                 display: inline-block;
                 border: 1px solid #e1e3ea;
@@ -172,7 +172,7 @@
                 vertical-align: -1px;
               }
               span,b{
-                font-size: 13px;
+                font-size:$fontsize14;
                 display: inline-block;
                 height: 28px;
                 line-height: 28px;
@@ -208,7 +208,7 @@
                 vertical-align:top;
                 height: 28px;
                 line-height: 28px;
-                font-size: 14px;
+                font-size:$fontsize15;
                 color: $menuActiveText;
                 cursor:pointer;
                 padding: 0 10px;
@@ -223,7 +223,7 @@
       border-top: 1px solid #f0f0f0;
       p{
         padding: 10px 30px;
-        font-size: 12px;
+        font-size:$fontsize13;
         line-height: 24px;
         color: #a6a6a6;
         i{
@@ -243,7 +243,7 @@
         display: block;
         height: 28px;
         line-height: 28px;
-        font-size: 13px;
+        font-size:$fontsize14;
         color: #666666;
         text-align: left;
       }
@@ -280,7 +280,7 @@
             line-height: 26px;
             color: #2259e5;
             border: 1px solid #2259e5;
-            font-size: 12px;
+            font-size:$fontsize13;
             padding: 0 15px;
             position: relative;
             z-index: 1;
@@ -298,7 +298,7 @@
             text-align: center;
             vertical-align: middle;
             line-height: 12px;
-            font-size: 10px;
+            font-size:$fontsize11;
             color: #9a9a9a;
             z-index: 2;
             cursor: pointer;
@@ -400,7 +400,7 @@
           line-height: 28px;
           color: #7c7e80;
           padding: 0 10px;
-          font-size: 12px;
+          font-size:$fontsize13;
           height: 28px;
           cursor: pointer;
         }
@@ -511,7 +511,7 @@
             }
           }
           span,b{
-            font-size: 13px;
+            font-size:$fontsize14;
             display: inline-block;
             height: 28px;
             line-height: 28px;
@@ -541,7 +541,7 @@
         line-height: 32px;
         height: 32px;
         cursor: pointer;
-        font-size: 12px;
+        font-size:$fontsize13;
         text-align: center;
         margin: 9px 3px 0;
       }
@@ -564,14 +564,14 @@
                 display: inline-block;
                 height: 28px;
                 line-height:28px;
-                font-size: 16px;
+                font-size:$fontsize17;
                 color: #1a1a1a;
               }
               span{
                 display: inline-block;
                 height: 28px;
                 line-height: 28px;
-                font-size: 12px;
+                font-size:$fontsize13;
                 color: #a1a1a1;
               }
             }
@@ -584,7 +584,7 @@
                 height: 28px;
                 border: 1px solid #ecedf1;
                 line-height: 26px;
-                font-size: 12px;
+                font-size:$fontsize13;
                 color: #a1a1a1;
                 padding: 0 10px;
                 cursor: pointer;
@@ -639,7 +639,7 @@
                       display: block;
                       height: 16px;
                       line-height: 16px;
-                      font-size: 12px;
+                      font-size:$fontsize13;
                       font-style: normal;
                       font-weight: normal;
                     }
@@ -662,7 +662,7 @@
                 .txt-font{
                   height:20px;
                   line-height: 20px;
-                  font-size: 14px;
+                  font-size:$fontsize15;
                   color: #999999;
                 }
               }
@@ -681,7 +681,7 @@
                     dt{
                       height:30px;
                       line-height: 30px;
-                      font-size: 24px;
+                      font-size:$fontsize25;
                       color: #2aade0;
                       font-weight: bold;
                       text-align: left;
@@ -689,7 +689,7 @@
                     dd{
                       height: 22px;
                       line-height: 22px;
-                      font-size: 14px;
+                      font-size:$fontsize15;
                       color: #999999;
                       text-align: left;
                     }
@@ -714,13 +714,13 @@
                   overflow: hidden;
                   span{
                     line-height:20px;
-                    font-size: 14px;
+                    font-size:$fontsize15;
                     color: #999999;
                   }
                   strong{
                     position: relative;
                     line-height: 20px;
-                    font-size: 14px;
+                    font-size:$fontsize15;
                     color: #313131;
                   }
                 }
@@ -758,7 +758,7 @@
                       text-align: center;
                       .svg-i{
                         color: #f63c3a;
-                        font-size: 16px;
+                        font-size:$fontsize17;
                         width: 32px;
                         height: 32px;
                         text-align: center;
@@ -776,14 +776,14 @@
                       b{
                         height: 16px;
                         line-height: 16px;
-                        font-size: 12px;
+                        font-size:$fontsize13;
                         color: #999999;
                         font-weight: normal;
                       }
                       strong{
                         height: 30px;
                         line-height: 30px;
-                        font-size: 20px;
+                        font-size:$fontsize21;
                         &.up{
                           color: #f04c4c;
                         }
@@ -791,7 +791,7 @@
                           color: #59cab6;
                         }
                         .svg-i{
-                          font-size: 16px;
+                          font-size:$fontsize17;
                         }
                       }
                     }
@@ -823,14 +823,14 @@
                   display: inline-block;
                   height: 28px;
                   line-height:28px;
-                  font-size: 16px;
+                  font-size:$fontsize17;
                   color: #1a1a1a;
                 }
                 span{
                   display: inline-block;
                   height: 28px;
                   line-height: 28px;
-                  font-size: 12px;
+                  font-size:$fontsize13;
                   color: #a1a1a1;
                 }
               }
@@ -848,14 +848,14 @@
               display: inline-block;
               height: 28px;
               line-height:28px;
-              font-size: 16px;
+              font-size:$fontsize17;
               color: #1a1a1a;
             }
             span{
               display: inline-block;
               height: 28px;
               line-height: 28px;
-              font-size: 12px;
+              font-size:$fontsize13;
               color: #a1a1a1;
             }
           }
@@ -902,14 +902,14 @@
               display: inline-block;
               height: 28px;
               line-height:28px;
-              font-size: 16px;
+              font-size:$fontsize17;
               color: #1a1a1a;
             }
             span{
               display: inline-block;
               height: 28px;
               line-height: 28px;
-              font-size: 12px;
+              font-size:$fontsize13;
               color: #a1a1a1;
             }
           }
@@ -927,7 +927,7 @@
           height: 28px;
           border: 1px solid #ecedf1;
           line-height: 26px;
-          font-size: 12px;
+          font-size:$fontsize13;
           color: #a1a1a1;
           padding: 0 10px;
           cursor: pointer;
@@ -959,7 +959,7 @@
             }
             &.el-table th.el-table__cell{
               background-color: #f4f6f9;
-              font-size: 12px;
+              font-size:$fontsize13;
               color: #999;
             }
             &.el-table th.el-table__cell.is-leaf{
@@ -975,7 +975,7 @@
           height: 30px;
           text-align: center;
           line-height: 30px;
-          font-size: 12px;
+          font-size:$fontsize13;
           background-color: #f4f6f9;
           color: #666666;
           cursor: pointer;
@@ -1002,14 +1002,14 @@
                 display: inline-block;
                 height: 28px;
                 line-height:28px;
-                font-size: 16px;
+                font-size:$fontsize17;
                 color: #1a1a1a;
               }
               span{
                 display: inline-block;
                 height: 28px;
                 line-height: 28px;
-                font-size: 12px;
+                font-size:$fontsize13;
                 color: #a1a1a1;
               }
             }
@@ -1041,14 +1041,14 @@
                     display: inline-block;
                     height: 28px;
                     line-height:28px;
-                    font-size: 16px;
+                    font-size:$fontsize17;
                     color: #1a1a1a;
                   }
                   span{
                     display: inline-block;
                     height: 28px;
                     line-height: 28px;
-                    font-size: 12px;
+                    font-size:$fontsize13;
                     color: #a1a1a1;
                   }
                 }
