--- a/src/styles/-userCenter.scss
+++ b/src/styles/-userCenter.scss
@@ -14,7 +14,7 @@
                 border-right: 1px solid #ddd;
             }
             th{
-                font-size: 18px;
+                font-size:$fontsize19;
                 text-align: left;
                 font-weight: bold;
                 background: #f5f5f5;
