--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -159,7 +159,7 @@
   .SalesCardcheckbox{
     float:left;
     line-height:32px;
-    font-size:14px;
+    font-size:$fontsize15;
     padding:5px 10px 5px 0px;
   }
   .SalesCardInput{
@@ -297,7 +297,7 @@
       .svg-i{
         width:16px;
         height: 16px;
-        font-size: 16px;
+        font-size:$fontsize17;
         margin-right:5px;
         float: left;
         .svg-icon{
@@ -310,7 +310,7 @@
     margin-top: 4px;
   }
   p{
-    font-size:12px;
+    font-size:$fontsize13;
     line-height:20px;
     color:#333;
     em{
@@ -399,7 +399,7 @@
     font-weight:normal;
     line-height:32px;
     color:#1a1a1a;
-    font-size:15px;
+    font-size:$fontsize16;
   }
   .flex-content{
       .el-button--primary.is-plain{
@@ -407,7 +407,7 @@
           background:none;
           border:none;
           padding:9px 15px;
-          font-size:14px;
+          font-size:$fontsize15;
           &:active {
               border-color:#136add!important;
               background:#136add!important;
@@ -434,7 +434,7 @@
           margin:0px;
           vertical-align:top;
           background:#2e88ff;
-          font-size:16px;
+          font-size:$fontsize17;
           .searchWhite{
             width:16px;
             height:15px;
@@ -459,7 +459,7 @@
 /*buttonOne*/
 .buttonOne{
     .el-button.el-button--primary.is-plain{
-        font-size:13px;
+        font-size:$fontsize14;
         color:#666;
         background:#f1f3f6;
         border-color:#f1f3f6!important;
@@ -488,7 +488,7 @@
       line-height:20px;
       .el-checkbox__label{
           line-height:20px;
-          font-size:14px;
+          font-size:$fontsize15;
           color:#666;
       }
       .el-checkbox__input{
@@ -584,7 +584,7 @@
   .item-clues{
     float:left;
     position:relative;
-    font-size:12px;
+    font-size:$fontsize13;
     color:#606266;
     cursor:pointer;
     line-height:20px;
@@ -621,7 +621,7 @@
   .el-checkbox{
     float:left;
     position:relative;
-    font-size:12px;
+    font-size:$fontsize13;
     color:#606266;
     cursor:pointer;
     line-height:20px;
@@ -655,7 +655,7 @@
     }
     .el-checkbox__label{
       padding-left:0px;
-      font-size: 12px;
+      font-size:$fontsize13;
     }
     &.is-checked{
       border-color:#bfdbff;
@@ -706,7 +706,7 @@
 .article-user{
   width:100%;
   overflow:hidden;
-  font-size:14px;
+  font-size:$fontsize15;
   strong{
     margin-right:10px;
   }
@@ -726,7 +726,7 @@
       }
   }
   p,div{
-    font-size:16px;
+    font-size:$fontsize17;
     line-height:2;
   }
   img,video{
@@ -753,7 +753,7 @@
         border-right:1px solid #c3c0c0!important;
         padding:10px 10px!important;
         background:#f2f2f2;
-        font-size:16px;
+        font-size:$fontsize17;
       }
       td,th{
         width: 5%;
@@ -799,7 +799,7 @@
     clear:both;
     background:#f1f1f1;
     padding:15px 10px;
-    font-size:14px;
+    font-size:$fontsize15;
   }
   ul{
     clear:both;
@@ -809,7 +809,7 @@
       display:block;
       padding-top:3px;
       padding-bottom:3px;
-      font-size:14px;
+      font-size:$fontsize15;
       line-height:20px;
       color:#263445;
       position:relative;
@@ -835,7 +835,7 @@
   clear:both;
   display:block;
   overflow:hidden;
-  font-size:18px;
+  font-size:$fontsize19;
   color:#2e84f6;
   line-height:24px;
   padding-bottom:10px;
@@ -866,7 +866,7 @@
   &:before{display:none;}
   th.is-leaf{
     background:#e2e9ed;
-    font-size:14px;
+    font-size:$fontsize15;
     color:#555;
     font-weight:normal;
     border-bottom:1px solid #ebeff1;
@@ -879,11 +879,11 @@
   td{
     border-bottom:1px solid #ebeff1 !important;
     border-right:1px solid #ebeff1 !important;
-    font-size:13px !important;
+    font-size:$fontsize14 !important;
     color:#1a1a1a;
   }
   svg,i[class~="el-cion"]{
-    font-size:20px;
+    font-size:$fontsize21;
   }
   .el-table__placeholder{
     display:none!important;
@@ -1070,7 +1070,7 @@
       padding:0;
       .tips{
         margin-top: 10px;
-        font-size: 13px;
+        font-size:$fontsize14;
         color: #999;
         line-height: 24px;
       }
@@ -1089,7 +1089,7 @@
           border-radius:4px;
           text-align:center;
           line-height:34px;
-          font-size:18px;
+          font-size:$fontsize19;
           color:#999;
           cursor:pointer;
         }
@@ -1102,7 +1102,7 @@
           top:0;
           text-align:center;
           line-height:36px;
-          font-size:14px;
+          font-size:$fontsize15;
           cursor:pointer;
           color:#bbb;
         }
@@ -1148,7 +1148,7 @@
           top:0;
           text-align:center;
           line-height:36px;
-          font-size:14px;
+          font-size:$fontsize15;
           cursor:pointer;
           color:#bbb;
         }
@@ -1239,7 +1239,7 @@
         left:0;
         top:0;
         padding-left:16px;
-        font-size:16px;
+        font-size:$fontsize17;
         color:#303133;
         line-height:39px;
       }
@@ -1304,7 +1304,7 @@
     clear:both;
     display:block;
     font-style:normal;
-    font-size:12px;
+    font-size:$fontsize13;
     width:24px;
     line-height:32px;
     text-align:center;
@@ -1339,7 +1339,7 @@
       margin-right: 3px;
       padding-top: 1px;
       svg{
-        font-size: 14px;
+        font-size:$fontsize15;
       }
     }
     .workBg{
@@ -1366,7 +1366,7 @@
     margin-right: 3px;
     padding-top: 1px;
     svg{
-      font-size: 14px;
+      font-size:$fontsize15;
     }
   }
   .workBg{
@@ -1412,7 +1412,7 @@
     }
     span {
       display:block;
-      font-size:16px;
+      font-size:$fontsize17;
       margin-top:10px;
     }
     .disabled {
@@ -1564,7 +1564,7 @@
   padding-bottom:15px;
   overflow: hidden;
   .breadcrumb-link{
-    font-size: 13px;
+    font-size:$fontsize14;
     float:left;
     height: 18px;
     line-height: 18px;
@@ -1584,7 +1584,7 @@
     z-index: 1;
     .btn{
       display: inline-block;
-      font-size: 12px;
+      font-size:$fontsize13;
       padding: 4px 10px;
       border: 1px solid $menuActiveText;
       color: $menuActiveText;
@@ -1667,11 +1667,11 @@
             .ArticleSixFlTopTagFl{
                 float:left;
                 span{
-                    font-size:14px;
+                    font-size:$fontsize15;
                 }
             }
             .ArticleSixFlTopTagFr{
-                font-size:14px;
+                font-size:$fontsize15;
             }
         }
     }
@@ -1768,12 +1768,12 @@
     .info-content{
       padding-top:0;
       p,div{
-        font-size:14px;
+        font-size:$fontsize15;
       }
       table{
         tr{
           td{
-            font-size:14px;
+            font-size:$fontsize15;
           }
         }
       }
